# 55Shogi-AI

./: .gitignore  LICENSE  README.md
ab/shogi/: Makefile  node.cpp  node.h  params.h  report.md  root.cpp  root.h  usi.cpp  usi.h
battle/: analysis.py  battle.py  battle_log copy.csv  battle_log.csv  log.txt  random_battle_log.csv  result.ipynb  updated_battle_log.csv
common/: bitboard.cpp  bitboard.h  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  shogi.h  string_ex.cpp  string_ex.h  usi.cpp  usi.h  zobrist.cpp  zobrist.h
final/shogi/: model2_0109_1221.pt  model2_0109_1221_cpu.pt  model_0105_1144.pt  node.cpp  node.h  params.h  root.cpp  usi.cpp  usi.h
hybrid/shogi/: node.cpp  node.h  params.h  root.cpp  root.h
mcts/: CMakeLists.txt
mcts/shogi/: .gitignore  node.cpp  root.cpp  root.h
training/: shogi_nn.py  training.py
training/lib/: create_large_data.py  create_small_data.py  del_duplicate_data.py
training/optimize/grid_search/: display_results.py  grid_search.py
training/optimize/grid_search/results/: hyperparams_results1.csv  hyperparams_results2.csv  hyperparams_results3.csv  hyperparams_results4.csv  hyperparams_results_20240111203225.csv  hyperparams_results_20240112231708.csv  hyperparams_results_20240112235238.csv  hyperparams_results_20240113001919.csv  (+4 more)
training/optimize/optuna_search/: display_study.py  optimize_with_optuna.py
uct/: .gitignore  CMakeLists.txt  Makefile  hist.ipynb  hist.py  main.cpp  node.cpp  params.h  root.cpp  root.h  usi.cpp  usi.h
uct/shogi/: Makefile  node.cpp  node.h  params.h  root.cpp  root.h
(+6 files in other folders)
